<?xml version="1.0"?>
<package format="2">
  <name>wds_snapshot_client</name>
  <version>0.0.1</version>
  <description>WDS Snapshot Client ROS Package</description>

  <maintainer email="dev@wdsdrones.com">WDS Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>pybind11_catkin</depend>

  <export>
  </export>
</package>